<resources>
    <string name="app_name">Chat</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="home_fragment_label">Home Fragment</string>
    <string name="menu_title_home">홈</string>

    <string name="people_fragment_label">People Fragment</string>
    <string name="menu_title_people">사람</string>

    <string name="message_fragment_label">Message Fragment</string>
    <string name="menu_title_message">메시지</string>

    <string name="my_page_fragment_label">MyPage Fragment</string>
    <string name="my_page_fragment_logout">로그아웃</string>
    <string name="menu_title_my_page">마이페이지</string>

    <string name="recruit_fragment_label">Recruit Fragment</string>
    <string name="menu_title_recruit">채용</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="google_login_button_text">구글 로그인</string>
    <string name="email_login_button_text">이메일 로그인</string>
    <string name="sign_up_button_text">회원가입</string>

    <string name="home_fragment_message_hint">메시지 입력</string>

    <string name="create_message_fragment_search_hint">받는 사람</string>
    <string name="create_message_fragment_connect_people">연결된 사람</string>
</resources>