<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="kr.dagger.rocketpunchpretask.presentation.ui.MainActivity">
    <item
        android:id="@+id/HomeFragment"
        android:icon="@drawable/ic_outline_home"
        android:title="@string/menu_title_home" />
    <item
        android:id="@+id/PeopleFragment"
        android:icon="@drawable/ic_outline_people"
        android:title="@string/menu_title_people" />
    <item
        android:id="@+id/MessageFragment"
        android:icon="@drawable/ic_outline_message"
        android:title="@string/menu_title_message" />
    <item
        android:id="@+id/MyPageFragment"
        android:icon="@drawable/ic_outline_person_pin"
        android:title="@string/menu_title_my_page" />
    <item
        android:id="@+id/RecruitFragment"
        android:icon="@drawable/ic_outline_shopping_bag"
        android:title="@string/menu_title_recruit" />
</menu>