<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MessageFragment">

    <fragment
        android:id="@+id/HomeFragment"
        android:name="kr.dagger.chat.presentation.ui.home.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/PeopleFragment"
        android:name="kr.dagger.chat.presentation.ui.people.PeopleFragment"
        android:label="@string/people_fragment_label"
        tools:layout="@layout/fragment_people">

        <action
            android:id="@+id/action_navigation_peopleFragment_to_connectFragment"
            app:destination="@+id/ConnectFragment" />

    </fragment>

    <fragment
        android:id="@+id/ConnectFragment"
        android:name="kr.dagger.chat.presentation.ui.connect.ConnectFragment">

        <argument
            android:name="user"
            app:argType="kr.dagger.domain.model.User" />

    </fragment>
    <fragment
        android:id="@+id/MessageFragment"
        android:name="kr.dagger.chat.presentation.ui.message.MessageFragment"
        android:label="@string/message_fragment_label"
        tools:layout="@layout/fragment_message">

        <action
            android:id="@+id/action_navigation_messageFragment_to_createMessageFragment"
            app:destination="@id/CreateMessageFragment" />

        <action
            android:id="@+id/action_navigation_createMessageFragment_to_chatFragment"
            app:destination="@id/ChatFragment" />
    </fragment>

    <fragment
        android:id="@+id/CreateMessageFragment"
        android:name="kr.dagger.chat.presentation.ui.message.create.CreateMessageFragment"
        tools:layout="@layout/fragment_create_message">

        <action
            android:id="@+id/action_navigation_createMessageFragment_to_messageFragment"
            app:destination="@id/MessageFragment" />

        <action
            android:id="@+id/action_navigation_createMessageFragment_to_chatFragment"
            app:destination="@id/ChatFragment" />

    </fragment>

    <fragment
        android:id="@+id/ChatFragment"
        android:name="kr.dagger.chat.presentation.ui.chat.ChatFragment"
        tools:layout="@layout/fragment_chat">

        <action
            android:id="@+id/action_navigation_chatFragment_to_messageFragment"
            app:destination="@id/MessageFragment" />

        <action
            android:id="@+id/action_navigation_chatFragment_to_createMessageFragment"
            app:destination="@id/CreateMessageFragment" />

    </fragment>

    <fragment
        android:id="@+id/MyPageFragment"
        android:name="kr.dagger.chat.presentation.ui.mypage.MyPageFragment"
        android:label="@string/my_page_fragment_label"
        tools:layout="@layout/fragment_mypage">

    </fragment>

    <fragment
        android:id="@+id/RecruitFragment"
        android:name="kr.dagger.chat.presentation.ui.recruit.RecruitFragment"
        android:label="@string/recruit_fragment_label"
        tools:layout="@layout/fragment_recruit">

    </fragment>

</navigation>